se ha añadido un get provisional para probar el objeto devuelto con el populate

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=4000
 URL_DB=mongodb+srv://intrepidibex:Stos5BsCqdS7MzIb@cluster0.lxr4zbx.mongodb.net/?retryWrites=true&w=majority
 #URL_BD=mongodb+srv://mean_user:HsxZREPITzjgs4In@cluster0.ysimypn.mongodb.net/miBaseDatos
 SECRET=cabrasLasMejores2022
+CLOUD_NAME=dnsoadb8u
+API_KEY=586323345579831
+API_SECRET=o4oMb7WnPewZfTxGbK9m8Kfq4Cc
+CLOUDINARY_URL=cloudinary://586323345579831:o4oMb7WnPewZfTxGbK9m8Kfq4Cc@dnsoadb8u
