actualizacion de .env

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=4000
-URL_DB=mongodb+srv://intrepidibex:Stos5BsCqdS7MzIb@cluster0.lxr4zbx.mongodb.net/?retryWrites=true&w=majority
-#URL_BD=mongodb+srv://mean_user:HsxZREPITzjgs4In@cluster0.ysimypn.mongodb.net/miBaseDatos
+URL_DB=mongodb+srv://intrepidibex:fATZrryYtVMSpeBo@cluster0.lxr4zbx.mongodb.net/?retryWrites=true&w=majority
+SECRET=cabrasFckAmas2022
+CLOUD_NAME=dnsoadb8u
+API_KEY=296811377591121
+API_SECRET=27kXMgP4Vw8yxDUBtHlRg3Ek65k
+CLOUDINARY_URL=cloudinary://296811377591121:27kXMgP4Vw8yxDUBtHlRg3Ek65k@dnsoadb8u
