--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "cuid": "^2.1.8",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "file-system": "^2.2.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.3",
         "moongose": "^1.0.0",
