--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "file-system": "^2.2.2",
+        "heroku": "^7.63.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.3",
         "moongose": "^1.0.0",
