--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
-    "dependencies": {
-        "cloudinary": "^1.31.0",
-        "cors": "^2.8.5",
-        "cuid": "^2.1.8",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "file-system": "^2.2.2",
-        "heroku": "^7.63.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.5.3",
-        "moongose": "^1.0.0",
-        "multer": "^1.4.5-lts.1"
-    }
+  "dependencies": {
+    "@netlify/next": "^1.4.4",
+    "cloudinary": "^1.31.0",
+    "cors": "^2.8.5",
+    "cuid": "^2.1.8",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "fs-extra": "^11.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.3",
+    "moongose": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^12.12.0",
+    "serverless-http": "^3.1.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "back-events",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Intrepid-Ibex-08-2022/back-events.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Intrepid-Ibex-08-2022/back-events/issues"
+  },
+  "homepage": "https://github.com/Intrepid-Ibex-08-2022/back-events#readme"
 }
